# internal/common/model/category.go
@@ -4,3 +4,7 @@ type Category struct {
 	ID   string `gorm:"primaryKey;column:id;default:UUID()"`
 	Name string `gorm:"column:name"`
 }
+
+func (Category) TableName() string {
+	return "Categories"
+}
